--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASS=root
 DB_NAME=anycomp
+
+
+DATABASE_URL=postgresql://neondb_owner:YOUR_PASSWORD@ep-solitary-mud-aibadbnu.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require
