--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DB_NAME=anycomp
 
 
 DATABASE_URL=postgresql://neondb_owner:YOUR_PASSWORD@ep-solitary-mud-aibadbnu.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require
+CLOUDINARY_CLOUD_NAME=anycomp
+CLOUDINARY_API_KEY=565541873392346
+CLOUDINARY_API_SECRET=LU6vd8qhHTEfzyNiuTUJtDOMTzs
