--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "type": "commonjs",
   "dependencies": {
     "@types/exceljs": "^0.5.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.28",
