--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_PASS=root
 DB_NAME=anycomp
 
 
-DATABASE_URL=postgresql://neondb_owner:npg_grWp1x4StJGi@ep-solitary-mud-aibadbnu.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:npg_grWp1x4StJGi@ep-solitary-mud-aibadbnu.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 CLOUDINARY_CLOUD_NAME=dgqj7kvcp
 CLOUDINARY_API_KEY=565541873392346
 CLOUDINARY_API_SECRET=LU6vd8qhHTEfzyNiuTUJtDOMTzs
